Change Dockerfile to suppress CRLF

--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.18
 
-ENV BENCH_VERSION=1.0.5
+ENV BENCH_VERSION=1.0.6
 
 RUN apk add --no-cache sysbench fio jq libaio
 
@@ -8,6 +8,8 @@ ADD awk /bench/awk
 ADD fio /bench/fio
 ADD benchmark.sh /bench/1.sh
 
+RUN tr -d '\r' < /bench/awk/cpu.awk >/bench/1.awk && mv /bench/1.awk /bench/awk/cpu.awk
+RUN tr -d '\r' < /bench/awk/memory.awk >/bench/1.awk && mv /bench/1.awk /bench/awk/memory.awk
 RUN tr -d '\r' < /bench/1.sh >/bench/benchmark.sh && rm /bench/1.sh && chmod +x /bench/benchmark.sh
 
 ENTRYPOINT [ "/bench/benchmark.sh" ]
