Add more options for lsyncd users

--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
 FSI_VERSION=22.12
-LOG_LEVEL=info
-NGINX=stable
+NGINX_VERSION=stable
 FSI_CONFIG_PATH=./conf/fsi-server
+NGINX_CONFIG_PATH=./conf/nginx
 ASSET_PATH=./fsi-data/assets
 STORAGE_PATH=./fsi-data/storage
 OVERLAY_PATH=./fsi-data/overlay
+SOLR_PATH=./fsi-data/solr-core/fsi-server
+LOG_PATH=./fsi-data/logs
 SYNC_KEY=./conf/lsyncd/sync.key
+SOLR_SERVER_URI=http://solr-server:8983/solr/
+LOG_FSI_LEVEL=info
+MIRROR_HOSTNAME=fsi-secondary.domain.tld
