--- a/docker-compose-with-mirror.yml
+++ b/docker-compose-with-mirror.yml
@@ -13,7 +13,9 @@ services:
       - ./fsi-data:/srv/fsi/mounts
       - ${FSI_CONFIG_PATH}:/srv/fsi/mounts/config
       - ${ASSET_PATH}:/srv/fsi/mounts/assets
+      - ${OVERLAY_PATH}:/srv/fsi/mounts/overlay
       - ${STORAGE_PATH}:/srv/fsi/mounts/storage
+      - ${LOG_PATH}/fsi:/srv/fsi/mounts/catalina/logs
     depends_on:
       - solr-server
     userns_mode: "host"
@@ -32,14 +34,14 @@ services:
     restart: always
     container_name: solr
     volumes:
-      - ./fsi-data/solr-core/fsi-server:/opt/solr/server/solr/fsi-server
+      - ${SOLR_PATH}:/opt/solr/server/solr/fsi-server
     logging:
       driver: "json-file"
       options:
         max-size: "2000k"
 
   nginx:
-    image: nginx:${NGINX}
+    image: nginx:${NGINX_VERSION}
     restart: always
     container_name: nginx
     ports:
@@ -47,8 +49,8 @@ services:
       - "443:443"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ./conf/nginx:/etc/nginx:ro
-      # - /var/log/nginx:/var/log/nginx
+      - ${NGINX_CONFIG_PATH}:/etc/nginx:ro
+      - ${LOG_PATH}/nginx:/var/log/nginx
     logging:
       driver: "json-file"
       options:
@@ -60,17 +62,17 @@ services:
     build: lsyncd
     restart: always
     container_name: lsyncd
+    env_file:
+      - .env
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - ./conf/lsyncd/lsyncd.conf.lua:/config/lsyncd.lua:ro
-      - ${SYNC_KEY}:/data/authorized_keys/sync.key.pem:ro
-      - ${ASSET_PATH}:/data/assets:ro
-      - ${OVERLAY_PATH}:/data/overlay:ro
-      - ${STORAGE_PATH}:/data/storage:ro
-      # - ${FSI_CONFIG_PATH}:/data/config:ro
-      # - /var/log/lsyncd:/var/log
-    depends_on:
-      - fsi-server
+      - ${SYNC_KEY}:/data/authorized_keys/sync.key:ro
+      - ${ASSET_PATH}:${ASSET_PATH}:ro
+      - ${OVERLAY_PATH}:${OVERLAY_PATH}:ro
+      - ${STORAGE_PATH}:${STORAGE_PATH}:ro
+      # - ${FSI_CONFIG_PATH}:${FSI_CONFIG_PATH}:ro
+      - - ${LOG_PATH}/lsync:/var/log
     logging:
       driver: "json-file"
       options:
