--- a/conf/nginx/sites/fsi-server.conf
+++ b/conf/nginx/sites/fsi-server.conf
@@ -14,7 +14,6 @@ server {
 
   location / {
     proxy_pass http://fsiserver;
-    add_header strict-transport-security "max-age=31536000; includeSubDomains; preload";
   }
 
   location /fsi/interface {
@@ -39,6 +38,8 @@ server {
   location / {
     proxy_pass http://fsiserver/;
   }
+
+  add_header Strict-Transport-Security "max-age=63072000" always;
 
   ssl_certificate /etc/nginx/certificates/localhost.crt;
   ssl_certificate_key /etc/nginx/certificates/localhost.key;
