prepare for letsencrypt support

--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
-# Latest versions
-FSI_VERSION=22.12
-NGINX_VERSION=stable
+#
+# FSI Server image and version
+#
+FSI_SERVER_IMAGE=neptunelabs/fsi-server
+FSI_SERVER_IMAGE_TAG=22.12
+
+#
+# Nginx image and version
+#
+NGINX_IMAGE=nginx
+NGINX_IMAGE_TAG=alpine
 
 # Paths for FSI Server and Nginx configs
 FSI_CONFIG_PATH=./conf/fsi-server
