--- a/conf/nginx/sites/fsi-server.conf
+++ b/conf/nginx/sites/fsi-server.conf
@@ -19,6 +19,13 @@ server {
   location /fsi/interface {
     return 301 https://$host$uri;
   }
+
+  # Required for LE certificate enrollment using certbot
+  location '/.well-known/acme-challenge' {
+    default_type "text/plain";
+    root /var/www/html;
+  }
+
 }
 
 server {
