--- a/conf/nginx/conf.d/ssl.conf
+++ b/conf/nginx/conf.d/ssl.conf
@@ -1,5 +1,5 @@
 ssl_session_timeout 1d;
-ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+ssl_session_cache shared:MozSSL:10m;
 ssl_session_tickets off;
 
 ssl_protocols TLSv1.3;
