prepare for letsencrypt support

--- a/container/nginx/Dockerfile
+++ b/container/nginx/Dockerfile
@@ -2,7 +2,7 @@ ARG NGINX_IMAGE=nginx
 ARG NGINX_IMAGE_TAG=alpine
 FROM ${NGINX_IMAGE}:${NGINX_IMAGE_TAG}
 
-RUN apk update && apk add logrotate
+RUN apk update && apk add --no-cache logrotate openssl
 
 COPY --chmod=755 nginx-start.sh /nginx-start.sh
 
