--- a/conf/nginx/sites/fsi-server.conf
+++ b/conf/nginx/sites/fsi-server.conf
@@ -50,7 +50,7 @@ server {
 
   ssl_certificate /etc/nginx/certificates/localhost.crt;
   ssl_certificate_key /etc/nginx/certificates/localhost.key;
-  # ssl_certificate /etc/nginx/certificates/domain.com/domain.com.fullchain.pem;
-  # ssl_certificate_key /etc/nginx/certificates/domain.com/domain.com.key.pem;
-  # ssl_trusted_certificate /etc/nginx/certificates/domain.com/domain.com.ca.pem;
+  # ssl_certificate /etc/letsencrypt/live/domain.com/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/domain.com/privkey.pem;
+  # ssl_trusted_certificate /etc/letsencrypt/live/domain.com/chain.pem;
 }
