--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ${NGINX_CONFIG_PATH}:/etc/nginx
       - ${LOG_PATH}/nginx:/var/log/nginx
+#      - /etc/letsencrypt/live:/etc/letsencrypt/live
     logging:
       driver: "json-file"
       options:
