--- a/conf/nginx/sites/fsi-server.conf
+++ b/conf/nginx/sites/fsi-server.conf
@@ -5,11 +5,10 @@ server {
   server_name _;
 
   location /fsi/live {
-    proxy_pass http://fsiserver;
-    proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_buffering  off;
+    proxy_pass http://fsiserver;
   }
 
   location / {
@@ -35,18 +34,25 @@ server {
   server_name _;
 
   location /fsi/live {
-    proxy_pass http://fsiserver;
-    proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    proxy_buffering  off;
+    proxy_buffering off;
+    proxy_pass http://fsiserver;
+  }
+
+  location /fsi/interface {
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Frame-Options "DENY" always;
+    add_header Referrer-Policy "strict-origin" always;
+    proxy_pass http://fsiserver;
   }
 
   location / {
     proxy_pass http://fsiserver/;
   }
 
-  add_header Strict-Transport-Security "max-age=63072000" always;
+  add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
   ssl_certificate /etc/nginx/certificates/localhost.crt;
   ssl_certificate_key /etc/nginx/certificates/localhost.key;
