--- a/container/nginx/Dockerfile
+++ b/container/nginx/Dockerfile
@@ -1,10 +1,10 @@
 ARG NGINX_IMAGE=nginx
-ARG NGINX_IMAGE_TAG=alpine
+ARG NGINX_IMAGE_TAG=stable-alpine
 FROM ${NGINX_IMAGE}:${NGINX_IMAGE_TAG}
 
 RUN apk update && apk add --no-cache logrotate openssl
 
-COPY --chmod=755 nginx-start.sh /nginx-start.sh
+COPY --chmod=755 nginx-start.sh /
 
 ENTRYPOINT ["/nginx-start.sh"]
 CMD service cron start && nginx -g 'daemon off;'
