--- a/conf/nginx/conf.d/proxy.conf
+++ b/conf/nginx/conf.d/proxy.conf
@@ -9,9 +9,13 @@ proxy_set_header Host $host;
 proxy_pass_header Server;
 
 proxy_connect_timeout      90;
-proxy_send_timeout         90;
-proxy_read_timeout         90;
+proxy_send_timeout        300;
+proxy_read_timeout        90s;
 proxy_buffers           32 4k;
+
+proxy_set_header Early-Data $ssl_early_data;
+
+proxy_http_version 1.1;
 
 client_max_body_size    1g;
 client_body_buffer_size 128k;
