fix X-Frame-Options value

--- a/conf/nginx/sites/fsi-server.conf
+++ b/conf/nginx/sites/fsi-server.conf
@@ -43,7 +43,7 @@ server {
   location /fsi/interface {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Frame-Options "DENY" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Referrer-Policy "strict-origin" always;
     proxy_pass http://fsiserver;
   }
