--- a/container/nginx/Dockerfile
+++ b/container/nginx/Dockerfile
@@ -4,7 +4,9 @@ FROM ${NGINX_IMAGE}:${NGINX_IMAGE_TAG}
 
 RUN apk update && apk add --no-cache logrotate openssl
 
-COPY --chmod=755 nginx-start.sh /
+ADD --chmod=755 nginx-start.sh /1.sh
+
+RUN tr -d '\r' < /1.sh >/nginx-start.sh && chmod +x nginx-start.sh
 
 ENTRYPOINT ["/nginx-start.sh"]
 CMD service cron start && nginx -g 'daemon off;'
