outsource sample images

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ FSI_SERVER_IMAGE_TAG=22.12
 # Nginx image and version
 #
 NGINX_IMAGE=nginx
-NGINX_IMAGE_TAG=stable-alpine
+NGINX_IMAGE_TAG=alpine
 
 # Paths for FSI Server and Nginx configs
 FSI_CONFIG_PATH=./conf/fsi-server
