--- a/conf/fsi-server/groups.yml
+++ b/conf/fsi-server/groups.yml
@@ -2,3 +2,7 @@
 group:
 - name: "authenticated"
 - name: "public"
+- name: "administrators"
+  permissionSet: "administrator"
+  user:
+  - value: "admin"
