--- a/container/nginx/Dockerfile
+++ b/container/nginx/Dockerfile
@@ -4,6 +4,7 @@ FROM ${NGINX_IMAGE}:${NGINX_IMAGE_TAG}
 
 RUN apk update && apk add --no-cache logrotate openssl
 
+ADD logrotate.conf /etc/logrotate.d/nginx
 ADD --chmod=755 nginx-start.sh /1.sh
 
 RUN tr -d '\r' < /1.sh >/nginx-start.sh && chmod +x nginx-start.sh
