--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -17,7 +17,8 @@ events {
 http {
   server_tokens off;
 
-  include /etc/nginx/mime.types;
+  include mime.types;
+  default_type  application/octet-stream;
 
   open_file_cache max=200000 inactive=20s;
   open_file_cache_valid 30s;
