--- a/container/nginx/logrotate.conf
+++ b/container/nginx/logrotate.conf
@@ -1,5 +1,5 @@
 /var/log/nginx/*.log {
-        su nginx nginx
+        su root root
         daily
         dateext
         dateformat -%Y-%m-%d
@@ -8,7 +8,6 @@
         compress
         delaycompress
         notifempty
-        create 640 nginx adm
         sharedscripts
         postrotate
                 if [ -f /var/run/nginx.pid ]; then
