add MIRROR_SSH_PORT for lsyncd

--- a/.env
+++ b/.env
@@ -39,8 +39,9 @@ LOG_FSI_LEVEL=info
 # Mirror Servers only
 #
 
+# Hostname and SSH port of the mirror server
+MIRROR_HOSTNAME=fsi-secondary.domain.tld
+MIRROR_SSH_PORT=22
+
 # SSH key for lsyncd
 SYNC_KEY=./conf/lsyncd/sync.key
-
-# Hostname where the SSH key was installed
-MIRROR_HOSTNAME=fsi-secondary.domain.tld
