--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,11 @@ services:
         max-size: "2000k"
 
   solr-server:
-    image: solr:6-alpine
+    image: solr:6-slim
     restart: always
     container_name: solr
+    user: "0:0"
+    command: ["/opt/solr/bin/solr", "start", "-p", "8983", "-f", "-force"]
     volumes:
       - ${SOLR_PATH}:/opt/solr/server/solr/fsi-server
     logging:
